[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Traps/Spiked Ball/Spiked Ball.png" type="Texture" id=1]
[ext_resource path="res://Traps/SpikedBall/SpikedBall.gd" type="Script" id=2]

[sub_resource type="Curve2D" id=2]
resource_local_to_scene = true
_data = {
"points": PoolVector2Array(  )
}

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="CircleShape2D" id=3]
resource_local_to_scene = true
radius = 80.0

[node name="SpikedBall" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource( 2 )

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]

[node name="BallArea" type="Area2D" parent="Path2D/PathFollow2D"]

[node name="Sprite" type="Sprite" parent="Path2D/PathFollow2D/BallArea"]
texture = ExtResource( 1 )
offset = Vector2( -0.5, -0.5 )

[node name="BallCollision" type="CollisionShape2D" parent="Path2D/PathFollow2D/BallArea"]
shape = SubResource( 1 )

[node name="DetectionArea" type="Area2D" parent="."]

[node name="DetectionCollision" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource( 3 )
one_way_collision_margin = 0.0

[node name="Tween" type="Tween" parent="."]

[connection signal="body_entered" from="Path2D/PathFollow2D/BallArea" to="." method="_on_BallArea_body_entered"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_DetectionArea_body_entered"]
